local deployment for fl-diabetes-prediction

--- a/notebooks/fl-diabetes-prediction/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/do2.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install dependencies"
+    "# Data Owner 01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install dependencies"
    ]
   },
   {
@@ -16,8 +23,14 @@
     "!uv pip install \\\n",
     "    \"flwr[simulation]==1.17.0\" \"flwr-datasets>=0.5.0\" \\\n",
     "    \"scikit-learn==1.6.1\" \"torch==2.7.0\" \\\n",
-    "    \"syft_flwr==0.1.3\" \\\n",
-    "    imblearn pandas loguru"
+    "    syft_flwr imblearn pandas loguru --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change `LOCAL_TEST` to True if you want to run the clients locally to test"
    ]
   },
   {
@@ -26,8 +39,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!syftbox app install https://github.com/OpenMined/rds-server\n",
-    "# this will run the rds server app globally"
+    "LOCAL_TEST = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install a `syftbox` app needed for this workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not LOCAL_TEST:\n",
+    "    !syftbox app install https://github.com/OpenMined/rds-server"
    ]
   },
   {
@@ -43,12 +72,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import syft_rds as sy\n",
-    "from syft_core import Client\n",
+    "from pathlib import Path\n",
     "\n",
-    "email = Client.load().email\n",
-    "print(f\"SyftBox client email: {email}\")\n",
-    "client = sy.init_session(email)"
+    "if LOCAL_TEST:\n",
+    "    from syft_rds.orchestra import setup_rds_server\n",
+    "\n",
+    "    DO_EMAIL = \"do2@openmined.org\"\n",
+    "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
+    "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
+    "else:\n",
+    "    import syft_rds as sy\n",
+    "    from syft_core import Client\n",
+    "\n",
+    "    DO_EMAIL = Client.load().email\n",
+    "    print(\"DO email: \", DO_EMAIL)\n",
+    "\n",
+    "    do_client = sy.init_session(host=DO_EMAIL)"
    ]
   },
   {
@@ -64,23 +103,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from huggingface_hub import snapshot_download\n",
     "\n",
-    "snapshot_download(\n",
-    "    repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
-    "    repo_type=\"dataset\",\n",
-    "    local_dir=\"./dataset/\",\n",
-    "    local_dir_use_symlinks=False,  # Set to False to copy files instead of symlinking\n",
-    ")"
+    "DATASET_DIR = Path(\"./dataset/\").expanduser().absolute()\n",
+    "\n",
+    "if not DATASET_DIR.exists():\n",
+    "    snapshot_download(\n",
+    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
+    "        repo_type=\"dataset\",\n",
+    "        local_dir=\"./dataset/\",\n",
+    "        local_dir_use_symlinks=False,  # Set to False to copy files instead of symlinking\n",
+    "    )"
    ]
   },
   {
@@ -91,10 +124,10 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "partition_number = 3  # please change this to any number from 0 to 4\n",
+    "partition_number = 0  # please change this to any number from 0 to 4\n",
     "DATASET_PATH = Path(f\"./dataset/pima-indians-diabetes-database-{partition_number}\")\n",
     "\n",
-    "dataset = client.dataset.create(\n",
+    "dataset = do_client.dataset.create(\n",
     "    name=\"pima-indians-diabetes-database\",\n",
     "    summary=\"Pima Indians Diabetes Database.\",\n",
     "    description_path=DATASET_PATH / \"README.md\",\n",
@@ -117,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = client.jobs.get_all(status=\"pending_code_review\")\n",
+    "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
     "jobs"
    ]
   },
@@ -154,8 +187,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = client.run_private(job)"
+    "import os\n",
+    "\n",
+    "if LOCAL_TEST:\n",
+    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
+    "\n",
+    "res_job = do_client.run_private(job)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
