--- a/notebooks/fl-diabetes-prediction/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/ds.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install dependencies "
+    "# Data Scientist (DS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install dependencies "
    ]
   },
   {
@@ -16,8 +23,23 @@
     "!uv pip install \\\n",
     "    \"flwr[simulation]==1.17.0\" \"flwr-datasets>=0.5.0\" \\\n",
     "    \"scikit-learn==1.6.1\" \"torch==2.7.0\" \\\n",
-    "    \"syft_flwr==0.1.3\" \\\n",
-    "    imblearn pandas loguru"
+    "    syft_flwr imblearn pandas loguru --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change `LOCAL_TEST` to True if you want to run the clients locally to test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOCAL_TEST = True"
    ]
   },
   {
@@ -55,20 +77,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import syft_rds as sy\n",
-    "from syft_core import Client\n",
+    "if LOCAL_TEST:\n",
+    "    from syft_rds.orchestra import setup_rds_server\n",
     "\n",
-    "DS = Client.load().email\n",
-    "print(\"DS email: \", DS)\n",
+    "    print(\"Running locally!\")\n",
     "\n",
-    "DO1 = \"flower-test-group-1@openmined.org\"\n",
-    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "    DS = \"ds@openmined.org\"\n",
+    "    print(\"DS email: \", DS)\n",
     "\n",
-    "do_client_1 = sy.init_session(host=DO1)\n",
-    "print(\"Logged into: \", do_client_1.host)\n",
+    "    DO1 = \"do1@openmined.org\"\n",
+    "    DO2 = \"do2@openmined.org\"\n",
     "\n",
-    "do_client_2 = sy.init_session(host=DO2)\n",
-    "print(\"Logged into: \", do_client_2.host)\n",
+    "    ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
+    "    do_client_1 = ds_stack.init_session(host=DO1)\n",
+    "    do_client_2 = ds_stack.init_session(host=DO2)\n",
+    "else:\n",
+    "    import syft_rds as sy\n",
+    "    from syft_core import Client\n",
+    "\n",
+    "    DS = Client.load().email\n",
+    "    print(\"DS email: \", DS)\n",
+    "\n",
+    "    DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "    DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "\n",
+    "    do_client_1 = sy.init_session(host=DO1)\n",
+    "    print(\"Logged into: \", do_client_1.host)\n",
+    "\n",
+    "    do_client_2 = sy.init_session(host=DO2)\n",
+    "    print(\"Logged into: \", do_client_2.host)\n",
     "\n",
     "do_clients = [do_client_1, do_client_2]\n",
     "do_emails = [DO1, DO2]"
@@ -252,6 +289,9 @@
    "source": [
     "import os\n",
     "\n",
+    "if LOCAL_TEST:\n",
+    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
@@ -259,11 +299,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## DS Observes the Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the DS can monitor the aggregated models trained no DO's private datasets in the `weights` folder"
+   ]
   }
  ],
  "metadata": {
