change local clients' emails for clarity

--- a/notebooks/federated-analytics-diabetes/do1.ipynb
+++ b/notebooks/federated-analytics-diabetes/do1.ipynb
@@ -73,17 +73,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO_EMAIL = \"flower-test-group-1@openmined.org\"\n",
-    "\n",
     "if LOCAL_TEST:\n",
     "    from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
     "\n",
     "    remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")\n",
+    "\n",
+    "    DO_EMAIL = \"do1@openmined.org\"\n",
     "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
     "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
     "else:\n",
     "    import syft_rds as sy\n",
+    "    from syft_core import Client\n",
     "\n",
+    "    DO_EMAIL = Client.load().email\n",
     "    do_client = sy.init_session(host=DO_EMAIL)"
    ]
   },
