--- a/notebooks/federated-analytics-diabetes/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/do2.ipynb
@@ -73,17 +73,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO_EMAIL = \"flower-test-group-2@openmined.org\"\n",
-    "\n",
     "if LOCAL_TEST:\n",
-    "    print(\"LOCAL_TEST is True\")\n",
     "    from syft_rds.orchestra import setup_rds_server\n",
     "\n",
+    "    DO_EMAIL = \"do2@openmined.org\"\n",
     "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
     "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
     "else:\n",
     "    import syft_rds as sy\n",
+    "    from syft_core import Client\n",
     "\n",
+    "    DO_EMAIL = Client.load().email\n",
     "    do_client = sy.init_session(host=DO_EMAIL)"
    ]
   },
