--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -52,30 +52,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "from syft_core import Client\n",
-    "\n",
-    "DO1 = \"flower-test-group-1@openmined.org\"\n",
-    "DO2 = \"flower-test-group-2@openmined.org\"\n",
-    "DS = Client.load().email\n",
-    "DS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if LOCAL_TEST:\n",
+    "    from pathlib import Path\n",
+    "\n",
     "    from syft_rds.orchestra import setup_rds_server\n",
+    "\n",
+    "    DS = \"ds@openmined.org\"\n",
+    "    print(\"DS email: \", DS)\n",
+    "\n",
+    "    DO1 = \"do1@openmined.org\"\n",
+    "    DO2 = \"do2@openmined.org\"\n",
     "\n",
     "    ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
     "    do_client_1 = ds_stack.init_session(host=DO1)\n",
     "    do_client_2 = ds_stack.init_session(host=DO2)\n",
     "else:\n",
     "    import syft_rds as sy\n",
+    "    from syft_core import Client\n",
+    "\n",
+    "    DS = Client.load().email\n",
+    "    print(\"DS email: \", DS)\n",
+    "    DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "    DO2 = \"flower-test-group-2@openmined.org\"\n",
     "\n",
     "    do_client_1 = sy.init_session(host=DO1)\n",
     "    do_client_2 = sy.init_session(host=DO2)\n",
@@ -467,8 +465,8 @@
     "\n",
     "for client in datasites:\n",
     "    job = client.jobs.submit(\n",
-    "        name=\"iris_fed_analytics\",\n",
-    "        description=\"Syft Flower Federated Analytics on the Iris Dataset\",\n",
+    "        name=\"Federated_analytics_diabetes\",\n",
+    "        description=\"Syft Flower Federated Analytics on the Diabetes Dataset\",\n",
     "        user_code_path=SYFT_FLWR_PROJECT_DIR,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
     "        tags=[\"federated\", \"analytics\", \"syft_flwr\", \"flwr\"],\n",
@@ -514,13 +512,6 @@
    "source": [
     "Now the DS can monitor the aggregated histograms from the DO's private datasets in the `figures` folder"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
