--- a/notebooks/fl-diabetes-prediction/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/ds.ipynb
@@ -271,14 +271,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DS starts the FL server code"
+    "<img src=\"./images/dsDoneSubmittingJobs.png\" width=\"40%\" alt=\"DS waits for jobs to be approved\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/dsAggregateModels.png\" width=\"30%\" alt=\"DS Aggregates Models\">"
+    "## DS starts the FL server code"
    ]
   },
   {
@@ -296,6 +296,15 @@
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
     "!uv run {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} --active"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model\n",
+    "\n",
+    "<img src=\"./images/dsAggregateModels.png\" width=\"30%\" alt=\"DS Aggregates Models\">"
    ]
   },
   {
