--- a/notebooks/fl-diabetes-prediction/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/do2.ipynb
@@ -141,6 +141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"./images/doWaitsForJobs.png\" width=\"40%\" alt=\"DO waits for jobs\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Review and Run Jobs"
    ]
   },
@@ -175,13 +182,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -193,6 +193,15 @@
     "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
     "\n",
     "res_job = do_client.run_private(job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
+    "\n",
+    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
    ]
   },
   {
