--- a/notebooks/fl-diabetes-prediction/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/ds.ipynb
@@ -57,11 +57,8 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "SYFT_FLWR_PROJECT_PATH = Path(\"./fl-diabetes-prediction\")\n",
     "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
-    "RUN_SIMULATION = True\n",
-    "\n",
-    "assert SYFT_FLWR_PROJECT_PATH.exists()"
+    "RUN_SIMULATION = True"
    ]
   },
   {
@@ -153,7 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SYFT_FLWR_PROJECT_PATH"
+    "SYFT_FLWR_PROJECT_PATH = Path(\"./fl-diabetes-prediction\")\n",
+    "assert SYFT_FLWR_PROJECT_PATH.exists()"
    ]
   },
   {
