--- a/notebooks/fl-diabetes-prediction/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/do2.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change `LOCAL_TEST` to True if you want to run the clients locally to test"
+    "Change `LOCAL_TEST` to True if you want to run the clients locally to test.   \n",
+    "With `LOCAL_TEST = False`, please have your syftbox client running. Installation instructions here https://www.syftbox.net/."
    ]
   },
   {
