--- a/notebooks/fl-diabetes-prediction/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/ds.ipynb
@@ -39,8 +39,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
-    "RUN_SIMULATION = True"
+    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\""
    ]
   },
   {
