update command to run syft-rds server

--- a/notebooks/fl-diabetes-prediction/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/do1.ipynb
@@ -28,17 +28,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install a `syftbox` app needed for this workflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not LOCAL_TEST:\n",
-    "    !syftbox app install https://github.com/OpenMined/rds-server"
+    "Run an `syft-rds server` in a separate terminal for this workflow:\n",
+    "\n",
+    "```bash\n",
+    "uv run syft-rds server\n",
+    "```"
    ]
   },
   {
