improve fl analytics flow

--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -11,22 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install syft_flwr numpy pandas matplotlib seaborn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test"
    ]
   },
@@ -37,6 +21,13 @@
    "outputs": [],
    "source": [
     "LOCAL_TEST = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you set `LOCAL_TEST` to `False`, you will need to have the `SyftBox` client running in the background"
    ]
   },
   {
@@ -117,8 +108,7 @@
    "source": [
     "## DS does some data analytics on mock datasets\n",
     "\n",
-    "For each client:\n",
-    "1. Concat the dataframes in `train.csv` and `mock.csv`\n",
+    "1. Concat the dataframes in `train.csv` and `mock.csv` of all clients into one dataframe `df`\n",
     "2. Calculating key statistical moments (count, sum, mean) and frequency distributions (histograms) for important features ('Glucose', 'BMI', 'Age'). Also visualize the historgrams"
    ]
   },
