update instructions to install SyftBox in the notebooks

--- a/notebooks/federated-analytics-diabetes/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/do2.ipynb
@@ -8,12 +8,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   \n",
+    "\n",
+    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
+    "```\n",
+    "curl -fsSL https://syftbox.net/install.sh | sh\n",
+    "```\n",
+    "to install SyftBox's CLI version."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "LOCAL_TEST = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With `LOCAL_TEST = False`, please also run an `syft-rds server` in a separate terminal for this workflow:\n",
+    "\n",
+    "```bash\n",
+    "uv run syft-rds server\n",
+    "```"
    ]
   },
   {
