--- a/notebooks/federated-analytics-diabetes/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/ds.ipynb
@@ -11,7 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test"
+    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   \n",
+    "\n",
+    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
+    "```\n",
+    "curl -fsSL https://syftbox.net/install.sh | sh\n",
+    "```\n",
+    "to install SyftBox's CLI version."
    ]
   },
   {
@@ -20,14 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you set `LOCAL_TEST` to `False`, you will need to have the `SyftBox` client running in the background"
+    "LOCAL_TEST = True"
    ]
   },
   {
