--- a/notebooks/fl-diabetes-prediction/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/do1.ipynb
@@ -11,8 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change `LOCAL_TEST` to True if you want to run the clients locally to test.   \n",
-    "With `LOCAL_TEST = False`, please have your syftbox client running. Installation instructions here https://www.syftbox.net/."
+    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
+    "```\n",
+    "curl -fsSL https://syftbox.net/install.sh | sh\n",
+    "```\n",
+    "to install SyftBox's CLI version."
    ]
   },
   {
@@ -28,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run an `syft-rds server` in a separate terminal for this workflow:\n",
+    "With `LOCAL_TEST = False`, please run an `syft-rds server` in a separate terminal for this workflow:\n",
     "\n",
     "```bash\n",
     "uv run syft-rds server\n",
