--- a/notebooks/fl-diabetes-prediction/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/do2.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change `LOCAL_TEST` to True if you want to run the clients locally to test.   \n",
-    "With `LOCAL_TEST = False`, please have your syftbox client running. Installation instructions here https://www.syftbox.net/."
+    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   \n",
+    "\n",
+    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
+    "```\n",
+    "curl -fsSL https://syftbox.net/install.sh | sh\n",
+    "```\n",
+    "to install SyftBox's CLI version."
    ]
   },
   {
