--- a/notebooks/fl-diabetes-prediction/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/do1.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Owner 01"
+    "# Data Owner 01\n",
+    "\n",
+    "TODO: outline of the steps  \n",
+    "1.  \n",
+    "2.  \n",
+    "3.  "
    ]
   },
   {
@@ -32,7 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = True"
+    "LOCAL_TEST = True\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "if LOCAL_TEST:\n",
+    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
    ]
   },
   {
@@ -83,7 +93,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upload dataset (skip if it's already uploaded)"
+    "## Upload dataset (skip if it's already uploaded)\n",
+    "TODO: put an image showing the uploading private / mock (synthetic) where mock goes to the SyftBox network, and private stays local"
    ]
   },
   {
@@ -137,7 +148,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review and Run Jobs"
+    "## 3. Review and Run Jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
+    "\n",
+    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
    ]
   },
   {
@@ -176,21 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "if LOCAL_TEST:\n",
-    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
-    "\n",
     "res_job = do_client.run_private(job)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
-    "\n",
-    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
    ]
   },
   {
