--- a/notebooks/fl-diabetes-prediction/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/do2.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Owner 01"
+    "TODO: change according to do1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Owner 02"
    ]
   },
   {
