--- a/notebooks/fl-diabetes-prediction/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/ds.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Scientist (DS)"
+    "# Data Scientist (DS)\n",
+    "\n",
+    "Outline:\n",
+    "1.  \n",
+    "2.  \n",
+    "3.  \n",
+    "4.  \n"
    ]
   },
   {
@@ -33,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some paths and constants "
+    "Some paths and constants "
    ]
   },
   {
@@ -44,14 +50,25 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\""
+    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "if LOCAL_TEST:\n",
+    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
+    "\n",
+    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
+    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Log into the data owners' datasites"
+    "## Log into the data owners' datasites\n",
+    "\n",
+    "TODO: put an image  \n",
+    "TODO: split into 2 sets of notebooks (local only and distributed only)"
    ]
   },
   {
@@ -98,7 +115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explore the datasets"
+    "## Explore the datasets\n",
+    "\n",
+    "TODO: demonstrate we can't access private data"
    ]
   },
   {
@@ -127,7 +146,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bootstrapping and run `syft_flwr` simulation"
+    "## Bootstrapping  (creates `main.py` and apend some info into `pyproject.toml`) and run `syft_flwr` simulation\n",
+    "\n",
+    "TODO: What does it mean to \"bootstrap\"?  \n",
+    "- What does it do?\n",
+    "- Why do we do it? (what's the role of `main.py` and what's the info being added to the toml file does?)\n",
+    "\n",
+    "TODO: Image of Flower code before and after bootstrap \n",
+    "\n",
+    "TODO: Explain a difference of Flower and syft_flwr projects (what code need to be modified) via an image (don't open the code files) - show git diff"
    ]
   },
   {
@@ -160,7 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run `flwr` and `syft_flwr` simulations (optional)"
+    "## Run `flwr` and `syft_flwr` simulations (optional)\n",
+    "\n",
+    "TODO: it's against mock data, since DS only has acccess to DOs' mock data locally, and to test the code runs before submitting"
    ]
   },
   {
@@ -189,8 +218,8 @@
    "outputs": [],
    "source": [
     "# clean up\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
-    "!rm -rf weights/"
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}  # clean before submitting\n",
+    "!rm -rf weights/  # "
    ]
   },
   {
@@ -233,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean up before submitting jobs\n",
+    "# clean up before submitting jobs  (TODO: make it in the backend)\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
     "!rm -rf weights/"
@@ -249,11 +278,10 @@
     "    print(f\"sending job to {client.host}\")\n",
     "    job = client.jobs.submit(\n",
     "        name=\"Syft Flower Experiment\",\n",
-    "        description=\"Syft Flower Federated Learning Experiment\",\n",
     "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
-    "        tags=[\"federated learning\", \"fl\", \"syft_flwr\", \"flwr\"],\n",
     "        entrypoint=\"main.py\",\n",
+    "        description=\"Syft Flower Federated Learning Experiment\",\n",
     "    )\n",
     "    print(job)"
    ]
@@ -269,7 +297,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DS starts the FL server code"
+    "## DS starts the FL server code\n",
+    "\n",
+    "TODO: having a GIF to demonstrate the long-running jobs that's exchanging the models between the clients and server"
    ]
   },
   {
@@ -278,15 +308,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "if LOCAL_TEST:\n",
-    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
-    "\n",
-    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
-    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
-    "\n",
     "!uv run {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} --active"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Change syntax to `ds_client.run(job)`"
    ]
   },
   {
