improving fl-diabetes-prediction notebooks

--- a/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
@@ -4,54 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: change according to do1.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data Owner 02"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   \n",
+    "# Data Owner 02\n",
     "\n",
-    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
-    "```\n",
-    "curl -fsSL https://syftbox.net/install.sh | sh\n",
-    "```\n",
-    "to install SyftBox's CLI version."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LOCAL_TEST = True"
+    "1. DO logs into the datasite as an admin\n",
+    "2. DO creates the dataset \n",
+    "3. DO reviews and run jobs submitted by data scientists"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run an `syft-rds server` in a separate terminal for this workflow:\n",
-    "\n",
-    "```bash\n",
-    "uv run syft-rds server\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DO logs in to datasite "
+    "## 1. DO2 logs in to datasite "
    ]
   },
   {
@@ -82,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upload dataset (skip if it's already uploaded)"
+    "## 2. DO2 creates dataset"
    ]
   },
   {
@@ -136,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review and Run Jobs"
+    "## 3. DO2 reviews and runs jobs on private data"
    ]
   },
   {
