improving ds local notebook

--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
@@ -39,7 +40,9 @@
     "DO_EMAIL = \"do1@openmined.org\"\n",
     "do_stack = setup_rds_server(\n",
     "    email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
    ]
   },
   {
@@ -63,6 +66,15 @@
    "outputs": [],
    "source": [
     "do1 = do_stack.init_session(host=DO_EMAIL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1.is_admin"
    ]
   },
   {
@@ -126,7 +138,6 @@
     "    path=DATASET_PATH / \"private\",\n",
     "    mock_path=DATASET_PATH / \"mock\",\n",
     "    description_path=DATASET_PATH / \"README.md\",\n",
-    "    summary=\"Pima Indians Diabetes Database\",\n",
     ")\n",
     "dataset.describe()"
    ]
@@ -217,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
