--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
-    "<img src=\"../images/dsLogsInAsGuests.png\" width=\"70%\" alt=\"DS logs into DOs' datasites as guests\">"
+    "<img src=\"../images/dsLogsInAsGuest.png\" width=\"60%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
   },
   {
@@ -41,6 +41,7 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
+    "from loguru import logger\n",
     "from syft_rds.orchestra import setup_rds_server\n",
     "\n",
     "DS = \"ds@openmined.org\"\n",
@@ -50,6 +51,15 @@
     "ds_stack = setup_rds_server(email=DS, root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
     "do1_guest = ds_stack.init_session(host=DO1)\n",
     "do2_guest = ds_stack.init_session(host=DO2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = ds_stack.client"
    ]
   },
   {
@@ -123,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note that if you do `dataset.get_private_path()` in the local test version, you will still be able to see the private datasets, this is because in local test, DOs' private datasets also locate on your machine**"
+    "Check that the DS can't access the private datasets, even with local test"
    ]
   },
   {
@@ -132,7 +142,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.get_private_path()"
+    "try:\n",
+    "    dataset.get_private_path()\n",
+    "except Exception as e:\n",
+    "    logger.error(e)"
    ]
   },
   {
@@ -153,11 +166,24 @@
     "│   └── task.py         # Defines your model, training and data loading\n",
     "├── pyproject.toml      # Project metadata like dependencies and configs\n",
     "└── README.md\n",
-    "``` \n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Concretely, for diabetes prediction, we have the project code under the path `../fl-diabetes-prediction`\n",
     "\n",
-    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"30%\" alt=\"DS explores datasets\">\n"
+    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"25%\" alt=\"DS explores datasets\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the context of `syft_flwr`, we have the following parties running the following code:"
    ]
   },
   {
@@ -176,11 +202,11 @@
    "source": [
     "2. Compared to a Flower project, the DS only needs to change a bit of how the `client_app.py`, which runs on the data owners' datasites, loads the data\n",
     "\n",
-    "<img src=\"../images/client_fn.png\" width=\"90%\" alt=\"client_fn comparison\">\n",
+    "<img src=\"../images/client_fn.png\" width=\"70%\" alt=\"client_fn comparison\">\n",
     "\n",
     "where the `load_syftbox_dataset` (used by `syft_flwr`) and the `load_flwr_data` (used by pure Flower) differ a bit like below:  \n",
     "\n",
-    "<img src=\"../images/load_syftbox_flwr_dataset.png\" width=\"90%\" alt=\"load datasets comparison\">\n"
+    "<img src=\"../images/load_syftbox_flwr_dataset.png\" width=\"70%\" alt=\"load datasets comparison\">\n"
    ]
   },
   {
@@ -250,7 +276,7 @@
    "source": [
     "# clean up\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}  # clean before submitting\n",
-    "!rm -rf weights/  # "
+    "!rm -rf ../weights/  #"
    ]
   },
   {
@@ -274,6 +300,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean up before submitting jobs  (TODO: make it in the backend)\n",
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
+    "!rm -rf weights/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,26 +331,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean up before submitting jobs  (TODO: make it in the backend)\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
-    "!rm -rf weights/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "for client in do_clients:\n",
     "    print(f\"sending job to {client.host}\")\n",
     "    job = client.jobs.submit(\n",
-    "        name=\"Syft Flower Experiment\",\n",
+    "        name=\"fl-diabetes-model\",\n",
     "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
     "        entrypoint=\"main.py\",\n",
-    "        description=\"Syft Flower Federated Learning Experiment\",\n",
+    "        description=\"trust me bro! :)) just kidding, check the code please!\",\n",
     "    )\n",
     "    print(job)"
    ]
@@ -340,15 +366,6 @@
    "outputs": [],
    "source": [
     "!uv run {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")} --active"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Change syntax to `ds_client.run(job)`"
    ]
   },
   {
@@ -391,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
