--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -31,13 +31,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "from syft_rds.orchestra import setup_rds_server\n",
     "\n",
     "DO_EMAIL = \"do2@openmined.org\"\n",
-    "do2 = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
-    "do2 = do2.init_session(host=DO_EMAIL)"
+    "do2_stack = setup_rds_server(\n",
+    "    email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\"\n",
+    ")\n",
+    "do2 = do2_stack.init_session(host=DO_EMAIL)\n",
+    "\n",
+    "\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do2_stack.client.config_path)"
    ]
   },
   {
@@ -109,7 +115,6 @@
     "    path=DATASET_PATH / \"private\",\n",
     "    mock_path=DATASET_PATH / \"mock\",\n",
     "    description_path=DATASET_PATH / \"README.md\",\n",
-    "    summary=\"Pima Indians Diabetes Database.\",\n",
     ")\n",
     "dataset.describe()"
    ]
@@ -158,8 +163,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do2.client.config_path)\n",
     "\n",
     "res_job = do2.run_private(job)"
    ]
